# -WIP-Tester-for-POSIX-Scheduler

./: .gitignore  Cargo.toml  LICENSE.md  README.md  clear.sh  get_machine_info.sh  run.py
.github/workflows/: rust.yml
TestProgramGen/: checker.cpp  checker.h  impl.cpp  impl.h  main.cpp  mapping.cpp  mapping.h  util.cpp  util.h
src/: errno.rs  lib.rs  main.rs  oracle_tree.rs  search.rs  spec.rs  spec.rs.old  test_suite.rs
src/spec/: cpu.rs  function.rs  functions.rs  sched_data.rs  scheduler.rs
src/spec/function/: pthread_create.rs  pthread_exit.rs  spawn.rs
tests/: tcb.rs
