[package]
name = "posix-sched-tester"
version = "0.1.0"
authors = ["Akira Hasegawa <akira.hasegawa@jaist.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clippy = { version = "0.0.302", optional = true }
itertools = "0.10.5"
memory-stats = "1.1.0"
once_cell = "1.18.0"
spin = "0.9.8"
strum = "0.26.2"
strum_macros = "0.26.2"
